# MEL

./: .clang-format  .gitignore  CMakeCache.txt  CMakeCache_COPY.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets_EXAMPLE - copia.json  CMakeUserPresets_EXAMPLE.json  CTestConfig.cmake  Makefile  README.md  ___if_8h_source.html  _append_8h_source.html  _as_ptr_8h_source.html  _barrier_8h_source.html  _basic_types_8h_source.html  _callback_8h_source.html  _callback___impl_8h_source.html  _callback_interface_8h_source.html  _callback_interface___impl_8h_source.html  _callback_subscriptor_8h_source.html  _callback_subscriptor___impl_8h_source.html  _common_defs_8h_source.html  _common_types_8h.html  _common_types_8h_source.html  _condition_8h_source.html  _conversion_8h_source.html  _critical_section_8h_source.html  _critical_section__mthread_8h_source.html  _element_8h_source.html  _event_8h_source.html  _event__mthread_8h_source.html  _ex_future_8h_source.html  _executor_8h_source.html  _find_8h_source.html  _find_best_8h_source.html  _flow_8h_source.html  _for_8h_source.html  _for_each_8h_source.html  (+814 more)
dabal/: CMakeLists.txt  Doxyfile  cmake_install.cmake  dabal.cpp  dabal.h
dabal/doc/: Doxyfile  index.html
dabal/doc/extra-doc/: execution_system.dox  main.dox  tasking_constructs.dox  tasking_system.dox
dabal/doc/html/: classexecution_1_1_executor-members.html  namespaceparallelism_1_1__private.html  structexecution_1_1_loop_hints-members.html  structexecution_1_1_loop_hints.html
dabal/include/: DabalLibType.h  FoundationLibType.h
dabal/include/core/: Callback.h  CallbackInterface.h  CallbackInterface_Impl.h  CallbackSubscriptor.h  CallbackSubscriptor_Impl.h  Callback_Impl.h  CriticalSection.h  CriticalSection_macosx.inl  CriticalSection_mthread.h  CriticalSection_posix.inl  Event.h  Event_mthread.h  FunctionCallbackInterface_Impl.h  FunctorCallbackInterface.h  FunctorCallbackInterface_Impl.h  Future.h  GenericProcess.h  GenericProcessDefs.h  GenericThread.h  HashTypes.h  Process.h  ProcessException.h  ProcessScheduler.h  Process_ARM64_IPhone.h  Process_ARM_IPhone.h  Process_X86.h  Process_X86_64.h  Process_x86_64_MAC.h  Runnable.h  Singleton.h  Singleton_Multithread_Policy.h  Singleton_Singlethread_Policy.h  SmartPtrCallbackInterface.h  SmartPtrCallbackInterface_Impl.h  State.h  StateMachine.h  StateTemplate.h  SyncValue.h  TLS.h  Thread.h  (+7 more)
dabal/include/execution/: CommonDefs.h  Continuation.h  ExFuture.h  Executor.h  RunnableExecutor.h  ThreadPoolExecutor.h
dabal/include/java/: jnibindings.h
dabal/include/mpl/: AsPtr.h  BasicTypes.h  Functor.h  FunctorImpl.h  HasMember.h  InheritanceCreator.h  LinkerImpl.h  MemberEncapsulateImpl.h  NullFunctorImpl.h  ParamAdderImpl.h  ReturnAdaptorImpl.h  StaticAssert.h  Type2Type.h  TypeTraits.h  _If.h  deleter.h  equal.h
dabal/include/parallelism/: Barrier.h  ComposedBarrier.h  For.h  SimpleBarrier.h  ThreadPool.h
dabal/include/parameter/: ArrayParameter.h  BaseParameter.h  BoolParameter.h  ComplexParameter.h  FloatParameter.h  IRefCountParameter.h  IntParameter.h  ListParameter.h  ParameterList.h  SimpleParameterList.h  StringParameter.h  UniqueParameterList.h
dabal/include/preprocessor/: params.h  synchronization_macros.h
dabal/include/tasking/: CriticalSection_mthread.h  Event_mthread.h  GenericProcess.h  GenericProcessDefs.h  Process.h  ProcessScheduler.h  Process_ARM64_IPhone.h  Process_ARM_Android.h  Process_ARM_GCC.h  Process_ARM_IPhone.h  Process_X64_GCC.h  Process_X64_MAC.h  Process_X64_MSVC.h  Process_X86.h  Process_X86_64.h  Process_x86_64_MAC.h  Runnable.h  ThreadRunnable.h  utilities.h
dabal/include/text/: SHA1.h  StringHashing.h  StringTokenizer.h  StringUtil.h  TextEncoding.h  base64.h  base64.inl  logger.h
dabal/source/core/: CriticalSection_mthread.cpp  Event_macosx.cpp  Event_mthread.cpp  Event_posix.cpp  Event_win32.cpp  Exception.cpp  GenericProcess.cpp  GenericThread.cpp  IRefCount.cpp  IllegalArgumentException.cpp  IllegalStateException.cpp  Process.cpp  ProcessException.cpp  ProcessScheduler.cpp  Process_ARM64_IPhone.cpp  Process_ARM_Android.cpp  Process_ARM_GCC.cpp  Process_ARM_IPhone.cpp  Process_X64_GCC.cpp  Process_X64_MSVC.cpp  Process_X86_64_MAC.cpp  Process_X86_GCC.cpp  Process_X86_MAC.cpp  Process_X86_MSVC.cpp  Runnable.cpp  State.cpp  StateMachine.cpp  TLS.cpp  Thread.cpp  ThreadProcess.cpp  ThreadRunnable.cpp  Thread_copy.cpp  Timer.cpp  Type.cpp  UnknownException.cpp  UnsupportedOperationException.cpp  atomics.cpp
dabal/source/java/: jnibindings.cpp
dabal/source/logging/: ConsoleAppender.cpp  SimpleLayout.cpp
dabal/source/parallelism/: Barrier.cpp  ComposedBarrier.cpp  For.cpp  SimpleBarrier.cpp  ThreadPool.cpp
dabal/source/parameter/: ArrayParameter.cpp  BaseParameter.cpp  BoolParameter.cpp  ComplexParameter.cpp  FloatParameter.cpp  IRefCountParameter.cpp  IntParameter.cpp  ListParameter.cpp  ParameterList.cpp  SimpleParameterList.cpp  StringParameter.cpp  UniqueParameterList.cpp
dabal/source/tasking/: CriticalSection_mthread.cpp  Event_mthread.cpp  GenericProcess.cpp  Process.cpp  ProcessScheduler.cpp  Process_ARM64_IPhone.cpp  Process_ARM_Android.cpp  Process_ARM_GCC.cpp  Process_ARM_IPhone.cpp  Process_X64_GCC.cpp  Process_X64_MAC.cpp  Process_X64_MSVC.cpp  Process_X64_MSVC_asm.asm  Process_X86_64_MAC.cpp  Process_X86_GCC.cpp  Process_X86_MAC.cpp  Process_X86_MSVC.cpp  Runnable.cpp  ThreadRunnable.cpp  utilities.cpp
mel/: CMakeLists.txt
mel/doc/: Doxyfile
mel/include/: DabalLibType.h
old/: README.txt
sample/: CMakeLists.txt  sample.cpp  sample.h
sample/test_callbacks/: test.cpp
sample/test_threading/: test.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  tests_main.cpp  tests_main.h
tests/test_callbacks/: test.cpp  test.h
tests/test_execution/: auxiliar.cpp  test.cpp  test.h  test_debug.cpp  test_debug.h  test_samples.cpp  test_samples.h
tests/test_parallelism/: test.cpp  test.h
tests/test_threading/: future_tests.cpp  future_tests.h  test.cpp  test.h  test_samples.cpp  test_samples.h
(+360 files in other folders)
